# tapestry

./: .common.mk  .gitignore  AGENTS.md  CONTRIBUTING.md  GITHUB_PAGES.md  Makefile  README-instructions.md  README.md  check-external-links.sh  common.mk  contributing.markdown  publish_date.txt  pyproject.toml  website.mk
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  code_change.yaml  docs_website_change.yaml  documentation_change.yaml  generic_issue.yaml  question.yaml  use_case.yaml
.github/PULL_REQUEST_TEMPLATE/: docs_website_pr.md  general_code_pr.md  new_contrib_pr.md  update_docs_code_pr.md
.github/workflows/: collect_metrics.yaml  jekyll.yml
_includes/: header_buttons_custom.html
_sass/: code.scss
_sass/custom/: custom.scss
contrib/: README.md
contrib/cultural-cpt-validation/: FINDINGS.md  HANDOFF.md  README.md  SPEC.md  fetch_corpus.py  run.py  run_aggregation.py  run_stats.py
contrib/jneums-consortium-experiment/: .custom.mk  LICENSE  README.md  run.py
contrib/jneums-cultural-cpt-validation/: .custom.mk  FINDINGS.md  LITERATURE.md  README.md  SPEC.md  fetch_corpus.py  re_aggregate.py  run_aggregation.py  run_stats.py
contrib/nguyennm1024-sociocultural-alignment/: .custom.mk  .env.example  DATA.md  LICENSE  README.md  requirements.txt
contrib/oli-sovereign-eval-evidence/: LICENSE  README.md  dataset-card-template.md  evaluation-matrix.md  release-gate-checklist.md
docs/: README.md  _config.yml  about.markdown  contributing.markdown  index.markdown
docs/_includes/: header_buttons_custom.html
docs/architecture/: 0-tva-methodology.md  2-pain-points.md  open-questions.md
examples/: consortium_training_demo.py  federated_training_demo.py
tech-docs/: README.md
website/: _config.yml  about.markdown  contributing.markdown  index.markdown
work-groups/: README.md
(+227 files in other folders)
