[project]
name = "tapestry"
version = "0.1.0"
description = "A Python project managed with uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.12.0",
    "numpy>=2.4.6",
    "pytest>=9.0.3",
    "black>=26.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=7.1.0",
    "pylint>=4.0.5",
    "black>=23.0.0",
    "ruff>=0.15.14",
    "ty>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
init-hook = "import sys; sys.path.insert(0, 'src')"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
